implementing API event fetching and installing bootstrap and fontawesome

--- a/Front/ProEvents-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEvents-App/src/app/eventos/eventos.component.html
@@ -3,7 +3,7 @@
 <!-- usando diretivas: -->
 <!-- ngFor vai repetir essa div de acordo com a condição passada, tipo um forEach (sim, é passado como prop da div) -->
 <div *ngFor="let evento of eventos">
-  <p><b>Tema:</b> {{ evento.Tema }}</p>
-  <p><b>Local:</b> {{ evento.Local }}</p>
+  <p><b>Tema:</b> {{ evento.theme }}</p>
+  <p><b>Local:</b> {{ evento.local }}</p>
   <hr />
 </div>
