--- a/Front/ProEvents-App/src/app/app.component.html
+++ b/Front/ProEvents-App/src/app/app.component.html
@@ -1,6 +1,8 @@
-<h1>Eventos</h1>
-<app-eventos></app-eventos>
-<h1>Palestrantes</h1>
-<app-speakers></app-speakers>
+<div class="container">
+  <h1>Eventos</h1>
+  <app-eventos></app-eventos>
+  <h1>Palestrantes</h1>
+  <app-speakers></app-speakers>
 
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
