--- a/Front/ProEvents-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEvents-App/src/app/components/eventos/eventos.component.html
@@ -1,4 +1,5 @@
-<h2>Eventos</h2>
+<app-title [title]="'Eventos'"></app-title
+><!--  O parametro esperado é um valor, então como eu quero uma string, devo passar dentro d aspas simples -->
 <hr />
 <div class="form-inline">
   <div class="form-group mb-2">
@@ -17,6 +18,8 @@
     <tr>
       <th>
         <button class="btn btn-outline-light btn-sm" (click)="alterImgState()">
+          <i class="{{ !viewImg ? 'fa fa-eye' : 'fa fa-eye-slash' }}"></i>
+          <!--cone do olhinho-->
           {{ viewImg ? "Ocultar" : "Exibir" }}
         </button>
       </th>
@@ -33,7 +36,7 @@
     <tr *ngFor="let event of eventsFiltered">
       <td>
         <img
-          src="/assets/{{ event.imageURL }}"
+          src="/assets/{{ event.imageUrl }}"
           alt="image"
           [style.width.px]="150"
           [style.margin.px]="marginImg"
@@ -41,17 +44,29 @@
           [isAnimated]="true"
         />
       </td>
-      <td>{{ event.eventId }}</td>
+      <td>{{ event.id }}</td>
       <td>{{ event.theme }}</td>
       <td>{{ event.local }}</td>
-      <td>{{ event.eventDate }}</td>
+      <td>{{ event.eventDate | DateFormatPipe }}</td>
       <td>{{ event.amountPeople }}</td>
-      <td>{{ event.lot }}</td>
+      <td>{{ event.lots[0]?.name }}</td>
+      <!--esse "?" me salvou, pq o primeiro evento n tem lote e bugou td-->
       <td>
-        <button type="button" class="btn btn-primary btn-sm mr-2">
-          Editar
+        <button
+          type="button"
+          class="btn btn-primary btn-sm mr-2"
+          tooltip="Editar"
+        >
+          <i class="fa fa-edit"></i>
         </button>
-        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+        <button
+          type="button"
+          class="btn btn-danger btn-sm"
+          tooltip="Excluir"
+          (click)="openModal(template)"
+        >
+          <i class="fa fa-trash"></i>
+        </button>
       </td>
     </tr>
   </tbody>
@@ -63,3 +78,15 @@
     </tr>
   </tfoot>
 </table>
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Do you want to confirm?</p>
+    <button type="button" class="btn btn-default" (click)="confirm()">
+      Sim
+    </button>
+    <button type="button" class="btn btn-primary" (click)="decline()">
+      Não
+    </button>
+  </div>
+</ng-template>
