components users + events (responsive lyt + forms)

--- a/Front/ProEvents-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEvents-App/src/app/components/eventos/eventos.component.html
@@ -1,92 +1,8 @@
-<app-title [title]="'Eventos'"></app-title
-><!--  O parametro esperado é um valor, então como eu quero uma string, devo passar dentro d aspas simples -->
-<hr />
-<div class="form-inline">
-  <div class="form-group mb-2">
-    <!-- abaixo é um two-way data binding [(ngModel)], q é responsável por manipular uma variável criada no tx de acordo com o q estou inputando e vice versa. (a tag q abraça o input deverá ser div aqui) -->
-    <label class="mr-2">Filtro: </label>
-    <input
-      type="text"
-      class="form-control mr-2"
-      placeholder="Buscar"
-      [(ngModel)]="listFilter"
-    />
-  </div>
-</div>
-<table class="table table-stripped">
-  <thead class="thead-dark">
-    <tr>
-      <th>
-        <button class="btn btn-outline-light btn-sm" (click)="alterImgState()">
-          <i class="{{ !viewImg ? 'fa fa-eye' : 'fa fa-eye-slash' }}"></i>
-          <!--cone do olhinho-->
-          {{ viewImg ? "Ocultar" : "Exibir" }}
-        </button>
-      </th>
-      <th>#</th>
-      <th>Tema</th>
-      <th>Local</th>
-      <th>Data</th>
-      <th>Qtd Pessoas</th>
-      <th>Lote</th>
-      <th>Options</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="events && events.length">
-    <tr *ngFor="let event of eventsFiltered">
-      <td>
-        <img
-          src="/assets/{{ event.imageUrl }}"
-          alt="image"
-          [style.width.px]="150"
-          [style.margin.px]="marginImg"
-          [collapse]="!viewImg"
-          [isAnimated]="true"
-        />
-      </td>
-      <td>{{ event.id }}</td>
-      <td>{{ event.theme }}</td>
-      <td>{{ event.local }}</td>
-      <td>{{ event.eventDate | DateFormatPipe }}</td>
-      <td>{{ event.amountPeople }}</td>
-      <td>{{ event.lots[0]?.name }}</td>
-      <!--esse "?" me salvou, pq o primeiro evento n tem lote e bugou td-->
-      <td>
-        <button
-          type="button"
-          class="btn btn-primary btn-sm mr-2"
-          tooltip="Editar"
-        >
-          <i class="fa fa-edit"></i>
-        </button>
-        <button
-          type="button"
-          class="btn btn-danger btn-sm"
-          tooltip="Excluir"
-          (click)="openModal(template)"
-        >
-          <i class="fa fa-trash"></i>
-        </button>
-      </td>
-    </tr>
-  </tbody>
-  <tfoot *ngIf="!events.length">
-    <tr>
-      <td colspan="8" class="text-center">
-        <h4>Nenhum evento encontrado!</h4>
-      </td>
-    </tr>
-  </tfoot>
-</table>
+<app-title
+  [title]="'Eventos'"
+  [iconClass]="'fa fa-calendar-alt'"
+  [listButton]="true"
+></app-title>
+<!--  O parametro esperado é um valor, então como eu quero uma string, devo passar dentro d aspas simples -->
 
-<ng-template #template>
-  <div class="modal-body text-center">
-    <p>Do you want to confirm?</p>
-    <button type="button" class="btn btn-default" (click)="confirm()">
-      Sim
-    </button>
-    <button type="button" class="btn btn-primary" (click)="decline()">
-      Não
-    </button>
-  </div>
-</ng-template>
+<router-outlet></router-outlet>
