--- a/Front/ProEvents-App/src/app/shared/nav/nav.component.html
+++ b/Front/ProEvents-App/src/app/shared/nav/nav.component.html
@@ -1,6 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav
+  class="navbar navbar-expand-lg navbar-light bg-white shadow-sm"
+  *ngIf="showMenu()"
+>
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="dashboard">ProEventos</a>
+    <a class="navbar-brand" routerLink="dashboard">
+      <i class="fa fa-users mb-2"></i>
+    </a>
     <button
       class="navbar-toggler"
       type="button"
@@ -24,7 +29,7 @@
           <a
             class="nav-link"
             aria-current="page"
-            routerLink="eventos"
+            routerLink="eventos/lista"
             routerLinkActive="active"
             >Eventos</a
           >
@@ -63,9 +68,9 @@
             class="dropdown-menu"
             aria-labelledby="navbarDropdownMenuLink"
           >
-            <a class="dropdown-item" routerLink="perfil"> Perfil </a>
+            <a class="dropdown-item" routerLink="user/perfil"> Perfil </a>
             <div role="separator" class="divider"></div>
-            <a class="dropdown-item" href="#"> Sair </a>
+            <a class="dropdown-item" routerLink="user/login"> Sair </a>
           </div>
         </li>
       </ul>
