--- a/Front/ProEvents-App/src/styles.scss
+++ b/Front/ProEvents-App/src/styles.scss
@@ -2,3 +2,5 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css";
 @import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
+/*abaixo um tema do bootswatch*/
+@import "../node_modules/bootswatch//dist/cosmo/bootstrap.min.css"
