--- a/Front/ProEvents-App/src/app/components/eventos/detail-event/detail-event.component.html
+++ b/Front/ProEvents-App/src/app/components/eventos/detail-event/detail-event.component.html
@@ -136,7 +136,7 @@
           Cancelar Alteração
         </button>
         <!--to bloqueando o botão d salvar enquanto o formulario n está validado por completo-->
-        <button class="btn btn-success" [disabled]="!form.valid" (click)="saveUpdate()">
+        <button class="btn btn-success" [disabled]="!form.valid" (click)="saveEvent()">
           <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
           Salvar Evento
         </button>
@@ -144,3 +144,103 @@
     </div>
   </form>
 </div>
+
+<!-- BEGIN FORM LOTS -->
+<!-- com a condião baseada em editMode, vou controlar quando mostrar os lotes na tela -->
+<div class="card rounded shadow-sm mt-4" *ngIf="editMode">
+    <div class="p-3">
+      <div class="d-flex border-bottom">
+        <h2 class="mr-auto">
+          Lotes do Evento
+        </h2>
+        <h2>
+          <i class="fas fa-money-bill-wave"></i>
+        </h2>
+      </div>
+      <p>Clique em Lote para adicionar e preencher novos Lotes</p>
+      <div class="form-row p-1">
+        <div [formGroup]="form" class="col">
+          <div formArrayName="lots" *ngFor="let lot of lots.controls; let i = index">
+            <!-- o i abaixo é a maneira de identificar nossos grupos de formulários para serem validados individualmente -->
+            <fieldset [formGroupName]="i" class="form-group">
+              <legend class="d-flex justify-content-between capitalize">
+                {{ returnLotTitle(lots.get(i + '.name')?.value) }}
+                <button class="p-2 btn btn-sm btn-outline-warning mb-1 d-flex"
+                  (click)="removeLot(template, i)"
+                  tooltip="Excluir Lote"
+                  [adaptivePosition]="false"
+                  [delay]="500"
+                  placement="left">
+                <i class="fa fa-window-close my-1"></i>
+                <b class="ml-1 d-none d-sm-block">Excluir</b>
+              </button>
+            </legend>
+            <div class="row">
+              <div class="form-group col-md-4">
+                <label>Nome</label>
+                <input [ngClass]="cssValidator(lots.get(i+'.name'))" type="text" class="form-control" formControlName="name" placeholder="Lote">
+              </div>
+              <div class="form-group col-md-4">
+                <label>Quantidade</label>
+                <input type="text" class="form-control" formControlName="amount" [ngClass]="cssValidator(lots.get(i+'.amount'))" placeholder="000">
+              </div>
+              <div class="form-group col-md-4">
+                <label>Preço</label>
+                <input type="text" currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',', align: 'left' }" class="form-control" formControlName="price" [ngClass]="cssValidator(lots.get(i+'.price'))" placeholder="R$ 0,00">
+              </div>
+              <div class="form-group col-md-4">
+                <label>Data Início</label>
+                <!-- função changeDate para alterar a data no reactive form, após alterarmos no datepicker -->
+                <input
+                bsDatepicker
+                formControlName="initialDate"
+                type="text"
+                class="form-control"
+                placeholder="01/01/2019"
+                >
+              </div>
+              <div class="form-group col-md-4">
+                <label>Data Fim</label>
+                <input
+                bsDatepicker
+                formControlName="finalDate"
+                type="text"
+                class="form-control"
+                placeholder="01/01/2019"
+                >
+              </div>
+            </div>
+          </fieldset>
+        </div>
+      </div>
+    </div>
+    <button (click)="addLot()" class="d-flex btn btn-outline-primary">
+      <i class="fa fa-plus-circle my-1"></i>
+      <b class="ml-1">Lote</b>
+    </button>
+  </div>
+  <div class="card-footer">
+    <div class="d-flex">
+      <button class="btn btn-outline-secondary mr-auto border">
+        Cancelar Alteração
+      </button>
+      <button [disabled]="!form.controls.lots.valid" (click)="saveLots()" class="btn btn-success">
+        Salvar Lotes
+      </button>
+    </div>
+  </div>
+</div>
+<br>
+<!-- END FORM LOTS -->
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Tem certeza que quer deletar o lote {{this.currentLot.name}}?</p>
+    <button type="button" class="btn btn-default" (click)="confirmDeleteLot()">
+      Sim
+    </button>
+    <button type="button" class="btn btn-primary" (click)="declineDeleteLot()">
+      Não
+    </button>
+  </div>
+</ng-template>
